--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <section class="features">
         <div class="features_content container">
           <div class="features_top_content">
-            <h2>FEATURES</h2>
+            <h2>Features</h2>
             <p>
               Our aim is to make it quick and easy for you to access your
               favourite websites. Your bookmarks sync between your devices so
